# gmail-mcp

./: .gitignore  CLAUDE.md  README.md  flake.nix  pyproject.toml
src/gmail_mcp/: __init__.py  config.py  gmail_client.py  server.py
